--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Heptacom\\HeptaConnect\\Dataset\\Base\\": "src/"
+            "Heptacom\\HeptaConnect\\Dataset\\Base\\": ""
         }
     },
     "repositories": {
