--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     },
     "config": {
         "allow-plugins": {
-            "infection/extension-installer": true
+            "infection/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "website": "https://heptaconnect.io"
